--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
 {
   "name": "吴佳怡的menu",
   "short_name": "佳怡menu",
-  "description": "吴佳怡的个性化点菜系统",
+  "description": "吴佳怡的个性化点菜系统，支持菜品管理和订单功能",
   "start_url": ".",
-  "display": "standalone", // 全屏显示，无浏览器地址栏
+  "display": "standalone",
   "background_color": "#f1faee",
   "theme_color": "#e63946",
   "icons": [
     {
-      "src": "https://ibb.co/rGbQV6P5",
+      "src": "https://i.ibb.co/rGbQV6P/46f45c03a87a6203248f509d9a23c8c3.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
-      "src": "https://ibb.co/rGbQV6P5",
+      "src": "https://i.ibb.co/rGbQV6P/46f45c03a87a6203248f509d9a23c8c3.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
-  ]
-
+  ],
+  "prefer_related_applications": false,
+  "related_applications": []
 }
